.metadata/.plugins/org.eclipse.cdt.ui/Res_stepMotor.build.log
16:58:05 **** Build of configuration Debug for project Res_stepMotor ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:234:23: error: 'GPIOc' undeclared (first use in this function); did you mean 'GPIOD'?
  234 |    HAL_GPIO_TogglePin(GPIOc, GPIO_PIN_3);
      |                       ^~~~~
      |                       GPIOD
../Core/Src/main.c:234:23: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:58:06 Build Failed. 2 errors, 0 warnings. (took 825ms)

